fixing goofy stretch

--- a/Lithium-3/style.css
+++ b/Lithium-3/style.css
@@ -78,3 +78,7 @@ body {
     display: block;
 }
 
+.researchers-img{
+    width: 300px;
+    display: block;
+}
